--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,31 @@
+streamlit
 langchain
+langchain-community
+langchain-groq
+langchain-openai
+langchain_huggingface
+langchain_chroma
+langchain-text-splitters
+
 python-dotenv
 ipykernel
-langchain-community
 pypdf
-bs4
-arxiv
 pymupdf
 wikipedia
-langchain-text-splitters
-langchain-openai
+bs4
+arxiv
 chromadb
 sentence_transformers
-langchain_huggingface
-faiss-cpu
-langchain_chroma
 duckdb
 pandas
 openai
-langchain-groq
 duckduckgo-search
-pymupdf
-arxiv
-wikipedia
 mysql-connector-python
 SQLAlchemy
 validators==0.28.1
-
 unstructured
 pytube
 numexpr
 huggingface_hub
 tqdm
-validators==0.28.1
 youtube-transcript-api==0.6.1
-
